2006-12-18  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
		Fix a bug in reading MemberRef pointing to MethodDef.

2006-12-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureReader.cs:
		Prevent a NRE if we're reading a multi module
		assembly through a stream if a module is not find.
		Fix #80273.

2006-12-07  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Allow an AssemblyDefinition to be written
		more than once.

2006-12-05  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Deal with nullref default parameters.

2006-12-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Handle constant where the parameter is object
		and the signature is something else.

2006-11-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollection.cs:
		Allow multiple typedefs with the same namespace+name
		to be able to read unvalid assemblies.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/PropertySig.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		- Deal with modifiers on properties.
		- Deal with non standard signatures when the byref
		flag is placed after the custom modifiers.
	  Mono.Cecil/StructureReader.cs:
		- Properly detect wether an assembli is a dll or not.

		Based on a patch by Argiris Kirtzidis <akyrtzi@gmail.com>.

2006-11-25  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/GenericArg.cs
	  Mono.Cecil.Signatures/GenericInstSignature.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Deal with modifiers for generic arguments.
		Based on a patch by Argiris Kirtzidis <akyrtzi@gmail.com>.

	* Mono.Cecil.Binary/ImageWriter.cs:
		Fix a bug in writing rsrc sections.

	* Mono.Cecil.Cil/CodeReader.cs:
		Do some refactoring.
