@@ -1,3 +1,8 @@
+2007-01-29  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Metadata/MetadataWriter.cs:
+		Save a byte ! Yeah !
+
 2006-12-18  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionReader.cs:
